# care-pet

./: .gitignore  .lycheeignore  404.html  CNAME  README.md  amplify.yml  docsbuild-with-javascript.md  index  index.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: csharp-pr-verity.yml  docs-links.yaml  docs-pages.yaml  docs-pages@v3.yaml  docs-pr.yaml  docs-pr@v1.yaml  docs-pr@v2.yaml  pages.yml
_static/css/: main.css
cpp/: .clang-format  CMakeLists.txt  README.md  docker-compose.yml
cpp/data/: care-pet-ddl.cql
cpp/src/: main.cpp
cpp/src/common/: CMakeLists.txt  database.cpp  database.hpp  json.cpp  json.hpp  model.hpp
cpp/src/migrate/: CMakeLists.txt  migrate.cpp  migrate.hpp
cpp/src/sensor/: CMakeLists.txt  sensor.cpp  sensor.hpp
cpp/src/server/: CMakeLists.txt  handlers.cpp  handlers.hpp  server.cpp  server.hpp
csharp/: CarePet.Migrate.csproj  CarePet.Sensor.csproj  CarePet.csproj  Config.cs  Makefile  Migrate.cs  README.md  Sensor.cs  build.sh  docker-compose.yml
csharp/Model/: Mapper.cs  Measure.cs  MeasureDAO.cs  Owner.cs  OwnerDAO.cs  Pet.cs  PetDAO.cs  Sensor.cs  SensorAvg.cs  SensorAvgDAO.cs  SensorDAO.cs  SensorType.cs
csharp/Resources/: care-pet-ddl.cql  care-pet-keyspace.cql
csharp/Server/: App.cs  ModelController.cs
docs/: Makefile  build-with-cpp.md  build-with-csharp.md  build-with-go.md  build-with-java.md  build-with-javascript.md  build-with-php.md  build-with-python.md  build-with-rust.md  build_with_go.md  conf.py  cpp-readme.md  csharp-readme.md  deploy-in-cloud.md  getting-started.md  getting_started.md  go-readme.md  index.rst  java-readme.md  javascript-readme.md  pyproject.toml  python-readme.md  rust-readme.md  sizing.md  sizing_spec_click_house.yaml  sizing_spec_v1.yaml
docs/_utils/: redirects.yaml  setup.sh
docs/cpp/: build-with-cpp.md  index.rst  run-with-cpp.md
docs/csharp/: index.rst  run-with-csharp.md
docs/go/: index.rst  run-with-go.md
docs/java/: index.rst  run-with-java.md
docs/javascript/: index.rst  run-with-javascript.md
docs/php/: build-with-php.md  index.rst  run-with-php.md
docs/python/: index.rst
docs/rust/: build-with-rust.md  index.rst
go/: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
go/api/: api.json
go/config/: gocql.go
go/db/: db.go  tables.go
go/docs/: .design_and_data_model.rst.swp  404.html  Makefile  conf.py  design_and_data_model.md  design_and_data_model.rst  getting_started.md  getting_started_with_carepet_a_sample_iot_app.rst  index.rst
go/handler/: avg.go  measures.go  owner.go  pets.go  sensors.go
go/model/: pet.go  rand.go
java/: README.md  docker-compose.yml  pom.xml
javascript/: README.md  package-lock.json  package.json
javascript/src/: config.js  db.js  index.js  logger.js  model.js  util.js
master/: .buildinfo  404.html  build-with-cpp.html  build-with-csharp.html  build-with-go.html  build-with-java.html  build-with-javascript.html  build-with-php.html  build-with-python.html  build-with-rust.html  deploy-in-cloud.html  design-and-data-model.html  design_and_data_model.html  genindex.html  getting-started.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml  sizing.html
master/.doctrees/: build-with-cpp.doctree  build-with-csharp.doctree  build-with-go.doctree  build-with-java.doctree  build-with-javascript.doctree  build-with-php.doctree  build-with-python.doctree  (+9 more)
php/: .env.example  .gitignore  README.md  composer.json  docker-compose.yaml  scylla
python/: README.md  docker-compose.yml  requirements.txt
quick-start/: docker-compose.yaml
rust/: Cargo.toml  README.md  docker-compose.yml
rust/src/: cli.rs  lib.rs  log.rs  main.rs
rust/src/controllers/: owner_controller.rs  pets_controller.rs  sensors_controller.rs
rust/src/database/: mod.rs
rust/src/database/migrate/: migrate.cql  mod.rs
rust/src/db/: cql.rs  keyspace.cql  migrate.cql  mod.rs
rust/src/handler/: avg.rs  measures.rs  mod.rs  owner.rs  pets.rs  sensors.rs
rust/src/http/: mod.rs
rust/src/http/controllers/: mod.rs  owner_controller.rs  pets_controller.rs  sensors_controller.rs
rust/src/model/: date.rs  duration.rs  mod.rs  owner.rs  pet.rs
rust/src/model/sensors/: mod.rs  sensor.rs  sensor_average.rs  sensor_measure.rs  sensor_type.rs
rust/src/repositories/: mod.rs  owner_repository.rs  pet_repository.rs  sensor_repository.rs
rust/src/stressers/: mod.rs
rust/src/stressers/loadtest/: flock.rs  main.rs  pets.rs  worker.rs
rust/src/stressers/sensor/: mod.rs
rust/src/stressers/stress/: flock.rs  workers.rs
rust/src/stressors/: mod.rs
rust/src/stressors/sensor/: mod.rs
rust/src/stressors/stress/: mod.rs  workers.rs
stable/: .buildinfo  CNAME  build-with-csharp.html  build-with-go.html  build-with-java.html  build-with-javascript.html  build-with-php.html  build-with-python.html  build-with-rust.html  deploy-in-cloud.html  design-and-data-model.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
stress/: README.md  care-pet-stress-100.yaml  care-pet-stress-10m.yaml  care-pet-stress-1m.yaml  scylladb-cloud.tf  scylladb-loader.tf  variables.tf
terraform/: README.md  main.tf  migrate.cql  migrate.sh  variables.tf
(+181 files in other folders)
