[tool.poetry]
name = "IoT-example"
description = "ScyllaDB IoT Example Documentation"
version = "1.0"
authors = ["ScyllaDB Documentation Contributors"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "6.0"
pygments = "2.11.2"
recommonmark = "0.7.1"
sphinx-scylladb-theme = "~1.2.1"
sphinx-sitemap = "2.2.0"
sphinx-autobuild = "2021.3.14"
Sphinx = "4.3.2"
sphinx-multiversion-scylla = "~0.2.11"
sphinx-markdown-tables = "0.0.17"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
