[package]
name = "care-pet"
version = "0.1.0"
edition = "2021"
default-run = "care-pet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = {version = "1.1", features = ["full"]}
scylla = { version = "0.13.0", features = ["chrono", "time"] }
chrono = "0.4"
humantime = "2.1"
anyhow = "1.0"
once_cell = "1.9"
uuid = {version = "1.8.0", features = ["v4", "serde"]}
rand = "0.8"
serde = "1.0"
struct_field_names = "0.2"
struct-field-names-as-array = "0.3.0"
itertools = "0.13.0"
rlimit = "0.10.1"
num_cpus = "1.13"
hdrhistogram = "7.4"
fake = "2.9.2"
charybdis = "0.6.0"
actix-web = "4.6.0"
serde_json = "1.0.117"
thiserror = "1.0.61"
derive_more = "0.99.17"
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "sensor"
path = "src/bin/sensor/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate/main.rs"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest/main.rs"

[[bin]]
name = "care-pet"
path = "src/main.rs"
