[package]
name = "care-pet"
version = "0.1.0"
edition = "2021"
default-run = "care-pet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0"
charybdis = "0.6.0"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
fake = "2.9.2"
hdrhistogram = "7.4"
humantime = "2.1"
log = "0.4"
pretty_env_logger = "0.5.0"
rand = "0.8"
rlimit = "0.10.1"
scylla = { version = "0.13.0", features = ["chrono", "time"] }
serde = "1.0"
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = {version = "1.1", features = ["full"]}
uuid = {version = "1.8.0", features = ["v4", "serde"]}

[[bin]]
name = "sensor"
path = "src/stressors/sensor/mod.rs"

[[bin]]
name = "migrate"
path = "src/database/migrate/mod.rs"

[[bin]]
name = "loadtest"
path = "src/stressors/stress/mod.rs"

[[bin]]
name = "care-pet"
path = "src/main.rs"
